# visoma

./: .gitignore  .pre-commit-config.yaml  README.adoc  pyproject.toml
.github/workflows/: update-lockfiles.yml.sample
container/: Containerfile  Containerignore  Containerignore_prod  build.sh  build_prod.sh  run.sh  run_prod.sh
src/visoma/: __cli__.py  __init__.py  __main__.py  client.py  http.py  lib.py  projects.py  ticket_statuses.py  ticket_types.py  tickets.py  timer_types.py  timers.py  user_groups.py  users.py  workdays.py
tests/: __init__.py  conftest.py
tests/unit/: test_client.py  test_http.py  test_lib.py  test_projects.py  test_ticket_statuses.py  test_ticket_types.py  test_tickets.py  test_timer_types.py  test_timers.py  test_user_groups.py  test_users.py  test_workdays.py
